Add Evaluation   add evaluation notebooks and src file, save data splits in notebooks, adapt keras gradcam, change image preprocessing

--- a/notebooks/Transfer_Learning_ResNet.ipynb
+++ b/notebooks/Transfer_Learning_ResNet.ipynb
@@ -512,6 +512,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_train_full.shape)\n",
+    "print(df_train.shape)\n",
+    "print(df_val.shape)\n",
+    "print(df_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save train-, val-, test-split to csv files\n",
+    "df_train_full.to_csv(f'{y_col}_df_train_full.csv')\n",
+    "df_train.to_csv(f'{y_col}_df__train.csv')\n",
+    "df_val.to_csv(f'{y_col}_df_val.csv')\n",
+    "df_test.to_csv(f'{y_col}_df_test.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
